--- a/src/styles_android.css
+++ b/src/styles_android.css
@@ -14,7 +14,7 @@
 	background: #222
 }*/
 
-body{
+body.android{
 	background-color:#333;
 	padding: 0px;
 	margin:0px;
@@ -26,7 +26,7 @@ body{
 	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 
-#content {
+#content.android{
 	max-width:10in;
 	position:relative;
 	background-color:#eee;
@@ -36,7 +36,7 @@ body{
 	overflow-y: auto;
 }
 
-#nav{
+#nav.android{
 	max-width:10in;
 	text-align: left;
 	padding:.5em;
@@ -46,13 +46,13 @@ body{
 	
 }
 
-#navTitle {
+#navTitle.android{
 	top: 0px;
 	text-align: Left;
 	font-weight: bold;
 }
 
-#navBack{
+#navBack.android{
 	float:left;
 	left: 0em;
 	height: 100%;
@@ -60,7 +60,7 @@ body{
 	opacity:.5;
 }
 
-#navIcon{
+#navIcon.android{
 	float:left;
 	left:1em;
 	height: 100%;
